[gd_scene load_steps=28 format=3 uid="uid://cvdqmlho1jwut"]

[ext_resource type="PackedScene" uid="uid://dy0oeh56twjk1" path="res://Mesh/Parts/Penis/CaninePenis/CaninePenis.glb" id="1_4oe3s"]
[ext_resource type="Script" uid="uid://c7jyatc2ye3fo" path="res://Mesh/Parts/Penis/CaninePenis/canine_penis.gd" id="2_vlnjl"]
[ext_resource type="Script" uid="uid://b17qxyq8oh4kq" path="res://Game/Doll/doll_attach_to.gd" id="3_hkkiv"]
[ext_resource type="Material" uid="uid://dqf0xlat51vbv" path="res://Mesh/Parts/Penis/CaninePenis/ShaftMat.tres" id="4_hkkiv"]
[ext_resource type="Material" uid="uid://1qayfq46npmg" path="res://Mesh/Parts/Penis/CaninePenis/PenisBallsFurMat.tres" id="4_vlnjl"]
[ext_resource type="Material" uid="uid://4muecpokhus3" path="res://Mesh/Parts/Penis/CaninePenis/TuftMat.tres" id="5_5uh76"]
[ext_resource type="Script" uid="uid://clc1kuop8qcgb" path="res://Game/Character/Bodyparts/Penis/PenisSkeletonModifier.gd" id="6_6kaci"]
[ext_resource type="Script" uid="uid://ddp3batfh4dqr" path="res://Util/CaninePenisGuideTest/FollowSplineSkeletonModifier.gd" id="8_nabfd"]
[ext_resource type="Script" uid="uid://1n0mqd1c34ui" path="res://addons/wigglebone/wiggle_rotation_modifier_3d.gd" id="9_vlnjl"]
[ext_resource type="Script" uid="uid://dk8kgax5eyeng" path="res://addons/wigglebone/wiggle_rotation_properties_3d.gd" id="10_nabfd"]
[ext_resource type="Script" uid="uid://bepjkkyvb5q18" path="res://Util/CaninePenisGuideTest/guide_path.gd" id="10_vlnjl"]
[ext_resource type="PackedScene" uid="uid://dek5xh0as01c2" path="res://Game/Doll/Particles/squirt_particles.tscn" id="12_5uh76"]
[ext_resource type="PackedScene" uid="uid://b11j3m713s4da" path="res://Mesh/Parts/Util/Penis/penis_handler.tscn" id="13_6kaci"]

[sub_resource type="Curve3D" id="Curve3D_nabfd"]
bake_interval = 0.01
_data = {
"points": PackedVector3Array(0, 0, -0.1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.44, 0, 0, -0.1, 0, -0.0497739, -0.00474973, 0, 0, 0.76),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[sub_resource type="TorusMesh" id="TorusMesh_5uh76"]

[sub_resource type="Curve" id="Curve_5uh76"]
_data = [Vector2(0, 0), 0.0, 5.14359, 0, 1, Vector2(0.112211, 0.577168), 0.0, 0.0, 0, 0, Vector2(0.181518, 0.535714), -0.33495, -0.33495, 0, 0, Vector2(0.267327, 0.495989), 0.0, 0.0, 0, 0, Vector2(0.442244, 0.47861), 0.0, 0.0, 0, 0, Vector2(0.617162, 0.504679), 1.59577, 1.59577, 0, 0, Vector2(0.867987, 0.878342), 0.0, 0.0, 0, 0, Vector2(1, 0.643717), -1.77729, 0.0, 1, 0]
point_count = 8

[sub_resource type="Resource" id="Resource_5uh76"]
script = ExtResource("10_nabfd")
spring_freq = 1.0
angular_damp = 5.0
force_scale = 180.0
linear_scale = 3600.0
swing_span = 1.0472
gravity = Vector3(0, -100, 0)
metadata/_custom_type_script = "uid://dk8kgax5eyeng"

[sub_resource type="Resource" id="Resource_vlnjl"]
script = ExtResource("10_nabfd")
spring_freq = 5.0
angular_damp = 35.0
force_scale = 180.0
linear_scale = 720.0
swing_span = 0.349066
gravity = Vector3(0, -10, 0)
metadata/_custom_type_script = "uid://dk8kgax5eyeng"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6kaci"]
use_particle_trails = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_im0a1"]
resource_local_to_scene = true
direction = Vector3(0, 0, 1)
spread = 3.057
initial_velocity_min = 3.0
initial_velocity_max = 3.0
collision_mode = 2
collision_use_scale = true

[sub_resource type="Curve" id="Curve_6kaci"]
_data = [Vector2(0, 0), 0.0, 6.88268, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="TubeTrailMesh" id="TubeTrailMesh_mor6m"]
radius = 0.01
section_length = 0.1
curve = SubResource("Curve_6kaci")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6kaci"]
resource_local_to_scene = true
direction = Vector3(0, 0, 1)
spread = 3.057
initial_velocity_min = 3.0
initial_velocity_max = 3.0
collision_mode = 2
collision_use_scale = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mor6m"]
resource_local_to_scene = true
direction = Vector3(0, 0, 1)
spread = 3.057
initial_velocity_min = 3.0
initial_velocity_max = 3.0
collision_mode = 2
collision_use_scale = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5uh76"]
resource_local_to_scene = true
emission_shape = 1
emission_sphere_radius = 0.05
direction = Vector3(0, 0, 1)
spread = 35.971
flatness = 1.0
initial_velocity_min = 1.0
initial_velocity_max = 4.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a6gdu"]
resource_local_to_scene = true
emission_shape = 1
emission_sphere_radius = 0.05
direction = Vector3(0, 0, 1)
spread = 35.971
flatness = 1.0
initial_velocity_min = 1.0
initial_velocity_max = 4.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_w0gqb"]
resource_local_to_scene = true
emission_shape = 1
emission_sphere_radius = 0.05
direction = Vector3(0, 0, 1)
spread = 35.971
flatness = 1.0
initial_velocity_min = 1.0
initial_velocity_max = 4.0

[node name="CaninePenis" node_paths=PackedStringArray("nodeToScale", "furTuft", "penisModifier", "jiggleModifiers") instance=ExtResource("1_4oe3s")]
script = ExtResource("2_vlnjl")
nodeToScale = NodePath("CaninePenisRig/Skeleton3D")
furTuft = NodePath("CaninePenisRig/Skeleton3D/FurPath_001")
penisModifier = NodePath("CaninePenisRig/Skeleton3D/PenisSkeletonModifier")
jiggleModifiers = [NodePath("CaninePenisRig/Skeleton3D/DMWBWiggleRotationModifier3D2"), NodePath("CaninePenisRig/Skeleton3D/DMWBWiggleRotationModifier3D3"), NodePath("CaninePenisRig/Skeleton3D/DMWBWiggleRotationModifier3D4"), NodePath("CaninePenisRig/Skeleton3D/DMWBWiggleRotationModifier3D5"), NodePath("CaninePenisRig/Skeleton3D/DMWBWiggleRotationModifier3D6"), NodePath("CaninePenisRig/Skeleton3D/DMWBWiggleRotationModifier3D7"), NodePath("CaninePenisRig/Skeleton3D/DMWBWiggleRotationModifier3D8")]

[node name="CaninePenisRig" parent="." index="0"]
script = ExtResource("3_hkkiv")
attachPoint = "penis"

[node name="ShaftNode" type="Marker3D" parent="CaninePenisRig/Skeleton3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.027741, 0.00991312)

[node name="GuidePath" type="Path3D" parent="CaninePenisRig/Skeleton3D" index="1" node_paths=PackedStringArray("shaftNode")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.029868, 0.082137)
curve = SubResource("Curve3D_nabfd")
script = ExtResource("10_vlnjl")
shaftNode = NodePath("../ShaftNode")
blendDistance = 1.225
straightness = 0.41

[node name="PathFollow3D2" type="PathFollow3D" parent="CaninePenisRig/Skeleton3D/GuidePath" index="0"]
transform = Transform3D(-0.999826, 0, -8.740975e-08, 0, 0.999858, 0, 8.7407564e-08, 0, -0.999851, 0, 0, 0.5826362)
progress = 0.582639

[node name="MeshInstance3D" type="MeshInstance3D" parent="CaninePenisRig/Skeleton3D/GuidePath/PathFollow3D2" index="0"]
transform = Transform3D(0.0615661, 5.2878e-09, 5.47513e-09, -5.47513e-09, -3.72529e-09, 0.0615661, 5.2878e-09, -0.0615661, -3.72529e-09, 0, 0, 0)
visible = false
mesh = SubResource("TorusMesh_5uh76")

[node name="PenisSkeletonModifier" type="SkeletonModifier3D" parent="CaninePenisRig/Skeleton3D" index="2"]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
accessibility_name = ""
accessibility_description = ""
accessibility_live = 0
accessibility_controls_nodes = Array[NodePath]([])
accessibility_described_by_nodes = Array[NodePath]([])
accessibility_labeled_by_nodes = Array[NodePath]([])
accessibility_flow_to_nodes = Array[NodePath]([])
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("6_6kaci")
lenModificationBone = "penis.005"
chainLength = 4
ballsBone = "balls"
metadata/_custom_type_script = "uid://clc1kuop8qcgb"

[node name="FollowSplineSkeletonModifier" type="SkeletonModifier3D" parent="CaninePenisRig/Skeleton3D" index="3" node_paths=PackedStringArray("targetPath")]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
accessibility_name = ""
accessibility_description = ""
accessibility_live = 0
accessibility_controls_nodes = Array[NodePath]([])
accessibility_described_by_nodes = Array[NodePath]([])
accessibility_labeled_by_nodes = Array[NodePath]([])
accessibility_flow_to_nodes = Array[NodePath]([])
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = false
influence = 1.0
script = ExtResource("8_nabfd")
bone = "penis.006"
chainLength = 9
targetPath = NodePath("../GuidePath")
thicknessCurve = SubResource("Curve_5uh76")
metadata/_custom_type_script = "uid://ddp3batfh4dqr"

[node name="Balls" parent="CaninePenisRig/Skeleton3D" index="4"]
surface_material_override/0 = ExtResource("4_vlnjl")

[node name="FurPath_001" parent="CaninePenisRig/Skeleton3D" index="5"]
surface_material_override/0 = ExtResource("5_5uh76")

[node name="DMWBWiggleRotationModifier3D" type="SkeletonModifier3D" parent="CaninePenisRig/Skeleton3D" index="6"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
accessibility_name = ""
accessibility_description = ""
accessibility_live = 0
accessibility_controls_nodes = Array[NodePath]([])
accessibility_described_by_nodes = Array[NodePath]([])
accessibility_labeled_by_nodes = Array[NodePath]([])
accessibility_flow_to_nodes = Array[NodePath]([])
transform = Transform3D(-1, 1.1368684e-13, 1.3430889e-06, -1.1368684e-13, -1, -1.6010861e-12, 1.3430889e-06, 0, 1, -3.547046e-15, 0.0050879642, 0.04268049)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("9_vlnjl")
bone_name = "balls"
properties = SubResource("Resource_5uh76")
metadata/_custom_type_script = "uid://1n0mqd1c34ui"

[node name="DMWBWiggleRotationModifier3D2" type="SkeletonModifier3D" parent="CaninePenisRig/Skeleton3D" index="7"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
accessibility_name = ""
accessibility_description = ""
accessibility_live = 0
accessibility_controls_nodes = Array[NodePath]([])
accessibility_described_by_nodes = Array[NodePath]([])
accessibility_labeled_by_nodes = Array[NodePath]([])
accessibility_flow_to_nodes = Array[NodePath]([])
transform = Transform3D(-1, -7.81597e-14, 1.192093e-06, 1.1910275e-06, -0.042271193, 0.99910617, 5.0391115e-08, 0.99910617, 0.042271193, 1.5135965e-15, 0.027374681, 0.10353082)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("9_vlnjl")
bone_name = "penis"
properties = SubResource("Resource_vlnjl")
metadata/_custom_type_script = "uid://1n0mqd1c34ui"

[node name="DMWBWiggleRotationModifier3D3" type="SkeletonModifier3D" parent="CaninePenisRig/Skeleton3D" index="8"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
accessibility_name = ""
accessibility_description = ""
accessibility_live = 0
accessibility_controls_nodes = Array[NodePath]([])
accessibility_described_by_nodes = Array[NodePath]([])
accessibility_labeled_by_nodes = Array[NodePath]([])
accessibility_flow_to_nodes = Array[NodePath]([])
transform = Transform3D(-1, 1.0658141e-14, 1.1920931e-06, 1.1879279e-06, -0.08352116, 0.99650604, 9.9565e-08, 0.99650604, 0.08352116, -2.1881207e-15, 0.02542911, 0.14951561)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("9_vlnjl")
bone_name = "penis.001"
properties = SubResource("Resource_vlnjl")
metadata/_custom_type_script = "uid://1n0mqd1c34ui"

[node name="DMWBWiggleRotationModifier3D4" type="SkeletonModifier3D" parent="CaninePenisRig/Skeleton3D" index="9"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
accessibility_name = ""
accessibility_description = ""
accessibility_live = 0
accessibility_controls_nodes = Array[NodePath]([])
accessibility_described_by_nodes = Array[NodePath]([])
accessibility_labeled_by_nodes = Array[NodePath]([])
accessibility_flow_to_nodes = Array[NodePath]([])
transform = Transform3D(-1, -7.1054274e-15, 1.192093e-06, 1.1829594e-06, -0.12355148, 0.9923382, 1.4728487e-07, 0.9923382, 0.12355148, -1.8019142e-15, 0.021584973, 0.1953807)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("9_vlnjl")
bone_name = "penis.002"
properties = SubResource("Resource_vlnjl")
metadata/_custom_type_script = "uid://1n0mqd1c34ui"

[node name="DMWBWiggleRotationModifier3D5" type="SkeletonModifier3D" parent="CaninePenisRig/Skeleton3D" index="10"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
accessibility_name = ""
accessibility_description = ""
accessibility_live = 0
accessibility_controls_nodes = Array[NodePath]([])
accessibility_described_by_nodes = Array[NodePath]([])
accessibility_labeled_by_nodes = Array[NodePath]([])
accessibility_flow_to_nodes = Array[NodePath]([])
transform = Transform3D(-1, 6.039613e-14, 1.192093e-06, 1.1762063e-06, -0.16271415, 0.9866733, 1.9397048e-07, 0.9866733, 0.16271415, -2.2332922e-15, 0.015898397, 0.24105403)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("9_vlnjl")
bone_name = "penis.003"
properties = SubResource("Resource_vlnjl")
metadata/_custom_type_script = "uid://1n0mqd1c34ui"

[node name="DMWBWiggleRotationModifier3D6" type="SkeletonModifier3D" parent="CaninePenisRig/Skeleton3D" index="11"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
accessibility_name = ""
accessibility_description = ""
accessibility_live = 0
accessibility_controls_nodes = Array[NodePath]([])
accessibility_described_by_nodes = Array[NodePath]([])
accessibility_labeled_by_nodes = Array[NodePath]([])
accessibility_flow_to_nodes = Array[NodePath]([])
transform = Transform3D(-1, -1.0658141e-13, 1.192093e-06, 1.1677241e-06, -0.20116268, 0.97955793, 2.3980454e-07, 0.97955793, 0.20116268, 4.4215416e-16, 0.008409321, 0.28646663)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("9_vlnjl")
bone_name = "penis.004"
properties = SubResource("Resource_vlnjl")
metadata/_custom_type_script = "uid://1n0mqd1c34ui"

[node name="DMWBWiggleRotationModifier3D7" type="SkeletonModifier3D" parent="CaninePenisRig/Skeleton3D" index="12"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
accessibility_name = ""
accessibility_description = ""
accessibility_live = 0
accessibility_controls_nodes = Array[NodePath]([])
accessibility_described_by_nodes = Array[NodePath]([])
accessibility_labeled_by_nodes = Array[NodePath]([])
accessibility_flow_to_nodes = Array[NodePath]([])
transform = Transform3D(-1, -1.6342483e-13, 1.1920929e-06, 1.1575736e-06, -0.23890486, 0.97104305, 2.847967e-07, 0.97104305, 0.23890486, -4.5676955e-15, -0.0008493727, 0.33155167)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("9_vlnjl")
bone_name = "penis.005"
properties = SubResource("Resource_vlnjl")
metadata/_custom_type_script = "uid://1n0mqd1c34ui"

[node name="DMWBWiggleRotationModifier3D8" type="SkeletonModifier3D" parent="CaninePenisRig/Skeleton3D" index="13"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
accessibility_name = ""
accessibility_description = ""
accessibility_live = 0
accessibility_controls_nodes = Array[NodePath]([])
accessibility_described_by_nodes = Array[NodePath]([])
accessibility_labeled_by_nodes = Array[NodePath]([])
accessibility_flow_to_nodes = Array[NodePath]([])
transform = Transform3D(-1, -1.7408297e-13, 1.1920929e-06, 1.145828e-06, -0.275887, 0.96119016, 3.2888283e-07, 0.96119016, 0.275887, -1.2193819e-14, -0.011845192, 0.37624484)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("9_vlnjl")
bone_name = "penis.006"
properties = SubResource("Resource_vlnjl")
metadata/_custom_type_script = "uid://1n0mqd1c34ui"

[node name="Shaft" parent="CaninePenisRig/Skeleton3D" index="14"]
surface_material_override/0 = ExtResource("4_hkkiv")

[node name="TipCumAttach" type="BoneAttachment3D" parent="CaninePenisRig/Skeleton3D" index="15"]
transform = Transform3D(-1, -1.7408297e-13, 1.1920929e-06, 1.145828e-06, -0.275887, 0.96119016, 3.2888283e-07, 0.96119016, 0.275887, -1.2193819e-14, -0.011845192, 0.37624484)
bone_name = "penis.006"
bone_idx = 9

[node name="CumParticlesForward" parent="CaninePenisRig/Skeleton3D/TipCumAttach" index="0" instance=ExtResource("12_5uh76")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.144011, 0.989576, 0, -0.989576, 0.144011, 4.44089e-16, 0.0122022, 0.00177575)
material_override = SubResource("StandardMaterial3D_6kaci")
amount = 16
lifetime = 2.0
one_shot = false
explosiveness = 0.75
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_im0a1")
draw_pass_1 = SubResource("TubeTrailMesh_mor6m")

[node name="CumParticlesForward2" parent="CaninePenisRig/Skeleton3D/TipCumAttach" index="1" instance=ExtResource("12_5uh76")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.144011, 0.989576, 0, -0.989576, 0.144011, 4.44089e-16, 0.0122022, 0.00177575)
material_override = SubResource("StandardMaterial3D_6kaci")
amount = 16
lifetime = 2.0
one_shot = false
explosiveness = 0.75
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_6kaci")
draw_pass_1 = SubResource("TubeTrailMesh_mor6m")

[node name="CumParticlesForward3" parent="CaninePenisRig/Skeleton3D/TipCumAttach" index="2" instance=ExtResource("12_5uh76")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.144011, 0.989576, 0, -0.989576, 0.144011, 4.44089e-16, 0.0122022, 0.00177575)
material_override = SubResource("StandardMaterial3D_6kaci")
amount = 16
lifetime = 2.0
one_shot = false
explosiveness = 0.75
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_mor6m")
draw_pass_1 = SubResource("TubeTrailMesh_mor6m")

[node name="BackCumAttach" type="BoneAttachment3D" parent="CaninePenisRig/Skeleton3D" index="16"]
transform = Transform3D(-1, 6.039613e-14, 1.192093e-06, 1.1762063e-06, -0.16271415, 0.9866733, 1.9397048e-07, 0.9866733, 0.16271415, -2.2332922e-15, 0.015898397, 0.24105403)
bone_name = "penis.003"
bone_idx = 6

[node name="CumParticlesBack" parent="CaninePenisRig/Skeleton3D/BackCumAttach" index="0" instance=ExtResource("12_5uh76")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_6kaci")
amount = 16
lifetime = 2.0
one_shot = false
explosiveness = 0.84
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_5uh76")
draw_pass_1 = SubResource("TubeTrailMesh_mor6m")

[node name="CumParticlesBack2" parent="CaninePenisRig/Skeleton3D/BackCumAttach" index="1" instance=ExtResource("12_5uh76")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_6kaci")
amount = 16
lifetime = 2.0
one_shot = false
explosiveness = 0.84
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_a6gdu")
draw_pass_1 = SubResource("TubeTrailMesh_mor6m")

[node name="CumParticlesBack3" parent="CaninePenisRig/Skeleton3D/BackCumAttach" index="2" instance=ExtResource("12_5uh76")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_6kaci")
amount = 16
lifetime = 2.0
one_shot = false
explosiveness = 0.84
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_w0gqb")
draw_pass_1 = SubResource("TubeTrailMesh_mor6m")

[node name="PenisHandler" parent="." index="1" node_paths=PackedStringArray("forwardCumParticles", "insideCumParticles") instance=ExtResource("13_6kaci")]
unique_name_in_owner = true
forwardCumParticles = [NodePath("../CaninePenisRig/Skeleton3D/TipCumAttach/CumParticlesForward"), NodePath("../CaninePenisRig/Skeleton3D/TipCumAttach/CumParticlesForward2"), NodePath("../CaninePenisRig/Skeleton3D/TipCumAttach/CumParticlesForward3")]
insideCumParticles = [NodePath("../CaninePenisRig/Skeleton3D/BackCumAttach/CumParticlesBack"), NodePath("../CaninePenisRig/Skeleton3D/BackCumAttach/CumParticlesBack2"), NodePath("../CaninePenisRig/Skeleton3D/BackCumAttach/CumParticlesBack3")]
